--- a/src/app/layouts/home/joinus-missions/joinus-missions.component.scss
+++ b/src/app/layouts/home/joinus-missions/joinus-missions.component.scss
@@ -1,328 +1,92 @@
 
 
-  //======================================== //
-  //========= NORMAL SCREEN STYLE ========== //
-  //======================================== //
   
-  @media only screen and (min-width: 1047px) {
+#uneteMisiones {
+
+    background-color: #f9f9f9;
+    padding: 40px 25px;
 
   
-    //=========== NORMAL SCREEN UNETE-MISIONES ===========//
-  
-      #uneteMisiones {
-    
-          padding: 40px 0;
-          background-color: #f9f9f9;
-      
-        
-          .container {
-    
-              max-width: 800px;
-              margin: 0 auto;
-              padding: 0 20px;
-      
-              #uneteMisionesTitleFirstLine {
-                // font-family: serif !important;
-                font-size: 1.3rem;
-                color: #3f51b5;
-                letter-spacing: 4px;
-                margin: 0 auto;
-                padding-bottom: 0px;
-                margin-bottom: 0px;
-                text-align: center;
-              } 
-        
-              #uneteMisionesTitleSecondLine {
-                // font-family: serif !important;
-                font-size: 2.9rem;
-                color:  var(--bs-dark-rgb);
-                letter-spacing: 6px;
-                margin: 0 auto;
-                padding-bottom: 5px;
-                margin-bottom: 40px;
-                text-align: center;
-              } 
-      
-              #uneteMisionesDescParagraph {
-                text-align: center;
-                margin-bottom: 30px;
-              }
-      
-            
-              form {
-        
-                  display: flex;
-                  flex-direction: column;
-                  gap: 20px;
+    .container {
 
+        max-width: 800px;
+        margin: 0 auto;
+        // padding: 0 20px;
 
-
-                  // label {
-                  //   display: block;
-                  //   margin-bottom: 5px;
-                  //   font-weight: bold;
-                  // }
-                  
-                  // input, textarea, select {
-                  //   width: 100%;
-                  //   padding: 8px;
-                  //   border: 1px solid #ccc;
-                  //   border-radius: 4px;
-                  // }
-                  
-                  // button {
-                  //   padding: 10px 15px;
-                  //   background-color: #007bff;
-                  //   color: white;
-                  //   border: none;
-                  //   border-radius: 4px;
-                  //   cursor: pointer;
-                  // }
-                  
-                  // button:disabled {
-                  //   background-color: #ccc;
-                  //   cursor: not-allowed;
-                  // }
-                  
-                  // p {
-                  //   color: red;
-                  //   font-size: 0.9em;
-                  //   margin-top: 5px;
-                  // }
-  
-                  
-
-              
-                  mat-form-field {
-                    width: 100%;
-                  }
-              
-                  mat-checkbox {
-                    // margin-bottom: 20px;
-              
-                      a {
-                          color: #3f51b5;
-                          text-decoration: underline;
-                          cursor: pointer;
-                  
-                          &:hover {
-                            color: #283593;
-                          }
-                      }
-                  }
-              
-                  button[mat-raised-button] {
-                      margin-top: 20px;
-                  }
-              
-                  .mensaje-exito {
-                      color: green;
-                      text-align: center;
-                      margin-top: 20px;
-                      font-weight: bold;
-                  }
-        
-              } //end form
-      
-          } //end container
-        
-      } //end uneteMisiones
-  
-  
-  } //end normal screen
-  
-  
-  
-  
-  //======================================== //
-  //=========== CELL PHONE STYLE =========== //
-  //======================================== //
-  
-  @media only screen and (max-width: 1046px) {
-  
-  
-      //=========== CELL PHONE UNETE-MISIONES ===========//
-    
-      #uneteMisiones {
-    
-    
-        padding: 40px 0;
-        background-color: #f9f9f9;
-    
-      
-        .container {
-    
-            max-width: 800px;
+        #uneteMisionesTitleFirstLine {
+            font-size: 1.3rem;
+            color: #3f51b5;
+            letter-spacing: 4px;
             margin: 0 auto;
-            padding: 0 20px;
-      
-            #uneteMisionesTitleFirstLine {
-              // font-family: serif !important;
-              font-size: 1.3rem;
-              color: #3f51b5;
-              letter-spacing: 4px;
-              margin: 0 auto;
-              padding-bottom: 0px;
-              margin-bottom: 0px;
-              text-align: center;
-            } 
-      
-            #uneteMisionesTitleSecondLine {
-              // font-family: serif !important;
-              font-size: 2.7rem;
-              color:  var(--bs-dark-rgb);
-              letter-spacing: 6px;
-              margin: 0 auto;
-              padding-bottom: 5px;
-              margin-bottom: 40px;
-              text-align: center;
-            } 
-      
-            #uneteMisionesDescParagraph {
-              text-align: center;
-              margin-bottom: 30px;
+            padding-bottom: 0px;
+            margin-bottom: 0px;
+            text-align: center;
+        } 
+  
+        #uneteMisionesTitleSecondLine {
+            //=========== NORMAL SCREEN SIZE ===========//
+            @media only screen and (max-width: 623px) {
+                font-size: 2.9rem;
             }
+            //=========== CELL PHONE SIZE ===========//
+            @media only screen and (max-width: 378px) {
+                font-size: 2.7rem;
+            }
+            // font-family: serif !important;
+            color:  var(--bs-dark-rgb);
+            letter-spacing: 6px;
+            margin: 0 auto;
+            padding-bottom: 5px;
+            margin-bottom: 40px;
+            text-align: center;
+        } 
+
+        #uneteMisionesDescParagraph {
+          text-align: center;
+          margin-bottom: 30px;
+        }
+
       
-          
-            form {
-      
-                display: flex;
-                flex-direction: column;
-                gap: 20px;
+        form {
+  
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
 
 
-                // label {
-                //   display: block;
-                //   margin-bottom: 5px;
-                //   font-weight: bold;
-                // }
-                
-                // input, textarea, select {
-                //   width: 100%;
-                //   padding: 8px;
-                //   border: 1px solid #ccc;
-                //   border-radius: 4px;
-                // }
-                
-                // button {
-                //   padding: 10px 15px;
-                //   background-color: #007bff;
-                //   color: white;
-                //   border: none;
-                //   border-radius: 4px;
-                //   cursor: pointer;
-                // }
-                
-                // button:disabled {
-                //   background-color: #ccc;
-                //   cursor: not-allowed;
-                // }
-                
-                // p {
-                //   color: red;
-                //   font-size: 0.9em;
-                //   margin-top: 5px;
-                // }
-
-
+            mat-form-field {
+              width: 100%;
+            }
+        
+            mat-checkbox {
+              // margin-bottom: 20px;
+        
+                a {
+                    color: #3f51b5;
+                    text-decoration: underline;
+                    cursor: pointer;
             
-                mat-form-field {
-                  width: 100%;
-                }
-            
-                mat-checkbox {
-                  // margin-bottom: 20px;
-            
-                    a {
-                        color: #3f51b5;
-                        text-decoration: underline;
-                        cursor: pointer;
-                
-                        &:hover {
-                            color: #283593;
-                        }
+                    &:hover {
+                      color: #283593;
                     }
                 }
-            
-                button[mat-raised-button] {
-                    margin-top: 20px;
-                }
-            
-                // .mensaje-exito {
-                //   font-family: Arial, Helvetica, sans-serif !important;
-                //   // background-color green;
-                //   text-align: center;
-                //   margin-top: 20px;
-                //   // font-weight: bold;
-                // }
-      
-            } //end form
-    
-        } //end container
-      
+            }
         
-    
-        // padding: 40px 0;
-        // background-color: #f9f9f9;
-      
-        // .container {
-        //   max-width: 800px;
-        //   margin: 0 auto;
-        //   padding: 0 20px;
-        // }
-      
-        // // h2 {
-        // //   text-align: center;
-        // //   color: #3f51b5;
-        // //   margin-bottom: 20px;
-        // // }
-      
-        // p {
-        //   text-align: center;
-        //   margin-bottom: 30px;
-        // }
-      
-        // form {
-    
-        //   display: flex;
-        //   flex-direction: column;
-        //   gap: 20px;
-      
-        //   mat-form-field {
-        //     width: 100%;
-        //   }
-      
-        //   mat-checkbox {
-        //     // margin-bottom: 20px;
-      
-        //     a {
-        //       color: #3f51b5;
-        //       text-decoration: underline;
-        //       cursor: pointer;
-      
-        //       &:hover {
-        //         color: #283593;
-        //       }
-        //     }
-        //   }
-      
-        //   button[mat-raised-button] {
-        //     margin-top: 20px;
-        //   }
-      
-        //   .mensaje-exito {
-        //     color: green;
-        //     text-align: center;
-        //     margin-top: 20px;
-        //     font-weight: bold;
-        //   }
-    
-        // } //end form
+            button[mat-raised-button] {
+                margin-top: 20px;
+            }
         
-      } //end uneteMisiones
+            .mensaje-exito {
+                color: green;
+                text-align: center;
+                margin-top: 20px;
+                font-weight: bold;
+            }
   
+        } //end form
+
+    } //end container
   
-  } //end cell phone
-  
+} //end uneteMisiones
   
   
