--- a/src/app/layouts/home/prevyear-video/prevyear-video.component.html
+++ b/src/app/layouts/home/prevyear-video/prevyear-video.component.html
@@ -9,20 +9,39 @@
     <div class="videoRow">
 
         <div class="videoContainer">
-            <iframe class="vertical-video" src="https://www.youtube.com/embed/SIEj5fBaIHw" frameborder="0" allowfullscreen></iframe>
+            <iframe class="vertical-video" src="https://www.youtube.com/embed/SIEj5fBaIHw" frameborder="0" allowfullscreen>
+            </iframe>
         </div>
         <!-- <div class="videoContainer">
             <iframe class="vertical-video" src="https://www.youtube.com/embed/SIEj5fBaIHw" frameborder="0" allowfullscreen></iframe>
         </div> -->
         <div class="videoTextContainer">
-            <p class="verse">
-                <span class="quote">“Id por todo el mundo y predicad el evangelio a toda criatura.”</span>
-                <span class="reference">- Marcos 16:15</span>
-            </p>
-            <p class="verse">
-                <span class="quote">“Por tanto, id, y haced discípulos a todas las naciones, bautizándolos en el nombre del Padre, y del Hijo, y del Espíritu Santo; enseñándoles que guarden todas las cosas que os he mandado; y he aquí, yo estoy con vosotros todos los días, hasta el fin del mundo. Amén”</span>
-                <span class="reference">- Mateo 28:19-20</span>
-            </p>
+            <div id="verse1" class="verse">
+                <p class="quote">“Id por todo el mundo y predicad el evangelio a toda criatura.”</p>
+                <p class="reference">- Marcos 16:15</p>
+            </div>
+            <div id="verse2" class="verse">
+                <p class="quote">“Por tanto, id, y haced discípulos a todas las naciones, bautizándolos en el nombre del Padre, y del Hijo, y del Espíritu Santo; enseñándoles que guarden todas las cosas que os he mandado; y he aquí, yo estoy con vosotros todos los días, hasta el fin del mundo. Amén.”</p>
+                <p class="reference">- Mateo 28:19-20</p>
+            </div>
+            <div id="verse3" class="verse">
+                <p class="quote">“¿Cómo, pues, invocarán a aquel en quien no han creído? ¿Y cómo creerán en aquel de quien no han oído? ¿Y cómo oirán sin haber quien les predique?”</p>
+                <p class="reference">- Romanos 10:14</p>
+            </div>
+            <!-- <p class="verse">
+                <span class="quote">“Proclamad su gloria entre las naciones, sus maravillas entre todos los pueblos.”</span>
+                <span class="reference">- Salmos 96:3</span>
+            </p> -->
+
+            <!-- <div class="verse-box">
+                <p class="verse-text">"¿Cómo, pues, invocarán a aquel en quien no han creído? ¿Y cómo creerán en aquel de quien no han oído? ¿Y cómo oirán sin haber quien les predique?"</p>
+                <p class="verse-ref">- Romanos 10:14</p>
+            </div>
+            
+            <div class="verse-box">
+                <p class="verse-text">"Proclamad su gloria entre las naciones, sus maravillas entre todos los pueblos."</p>
+                <p class="verse-ref">- Salmos 96:3</p>
+            </div> -->
         </div>
 
     </div>
