--- a/src/app/layouts/home/prevyear-video/prevyear-video.component.scss
+++ b/src/app/layouts/home/prevyear-video/prevyear-video.component.scss
@@ -1,17 +1,32 @@
+@import '../../../../styles/_variables.scss';
+
 #previousYearVideo {
 
-    padding: 70px 0 70px 0;
+    
+    //=========== NORMAL SCREEN SIZE ===========//
+    @media only screen and (min-width: 1047px) {
+        padding: 80px 80px;
+    }
+    //=========== CELL PHONE SIZE ===========//
+    @media only screen and (max-width: 1046px) {
+        padding: 80px 80px;
+    }
+    //=========== CELL PHONE SIZE ===========//
+    @media only screen and (max-width: 414px) {
+        padding: 80px 25px;
+    }
 
     .videoRow {
 
         display: flex;
+        flex-wrap: wrap;
         width: 100%;
         justify-content: center;
         align-items: center;
         margin: 0 auto;
         margin-bottom: 0px;
-        padding-left: 60px;
-        padding-right: 60px;
+        // padding-left: 80px;
+        // padding-right: 80px;
         // background: linear-gradient(to bottom, #f4f4f4, #e0e0e0); // Fondo suave
         // padding: 0;
 
@@ -20,7 +35,8 @@
             // max-width: 350px;
             // display: block;
             display: flex;
-            justify-content: right;
+            justify-content: center;
+
             //=========== NORMAL SCREEN SIZE ===========//
             @media only screen and (min-width: 1047px) {
                 width: 50%;
@@ -29,42 +45,51 @@
             @media only screen and (max-width: 1046px) {
                 width: 100%;
             }
-            padding: 0;
-            margin-left: 20px;
-            margin-right: 20px;
-            margin-bottom: 30px;
-
+            padding: 0 20px 30px 20px;
+            // margin-left: 20px;
+            // margin-right: 20px;
+            // margin-bottom: 30px;
 
             .vertical-video {
                 width: 100%;
                 max-width: 400px; /* Ancho fijo */
+                max-height: 500px; /* Alto fijo */
                 aspect-ratio: 9 / 16; /* Proporción vertical */
             }
+
 
         } //end videoContainer
 
         .videoTextContainer {
 
-            display: flex;
+            // display: flex;
             justify-content: left;
+
+            // flex-direction: column;
+            // align-items: center;
+            // gap: 20px;
+            // padding: 20px;
+            // background-color: lighten(#1e2757, 20%); // Un azul más claro
+
             //=========== NORMAL SCREEN SIZE ===========//
             @media only screen and (min-width: 1047px) {
-                width: 50%;
+                width: 35%;
             }
             //=========== CELL PHONE SIZE ===========//
             @media only screen and (max-width: 1046px) {
                 width: 100%;
             }
 
+
+
             .verse {
-                font-size: 1.4rem;
+                font-size: 1.1rem;
                 font-weight: bold;
                 color: #333;
                 margin: 15px 0;
                 padding: 10px;
-                border-left: 5px solid #007bff; // Línea decorativa
                 background: #ffffff;
-                border-radius: 5px;
+                // border-radius: 5px;
 
                 .quote {
                     display: block;
@@ -76,11 +101,45 @@
                     display: block;
                     font-size: 1rem;
                     font-weight: bold;
-                    color: #007bff; // Color azul para resaltar
+                    color: $gamaColor6; // Color azul para resaltar
                     margin-top: 5px;
                 }
 
             } //end verse
+
+
+            #verse1 {
+                //=========== NORMAL SCREEN SIZE ===========//
+                @media only screen and (min-width: 1047px) {
+                    margin: 0px 0px 15px 0px;
+                }
+                //=========== CELL PHONE SIZE ===========//
+                @media only screen and (max-width: 1046px) {
+                    margin: 50px 0px 15px 0px;
+                }
+                
+                padding: 0px 10px 10px 10px;
+                border-bottom: 1px solid $gamaColor4; // Línea decorativa
+            }
+
+            #verse2 {
+                border-bottom: 1px solid $gamaColor4; // Línea decorativa
+            }
+
+            #verse3 {
+                //=========== NORMAL SCREEN SIZE ===========//
+                @media only screen and (min-width: 1047px) {
+                    display: block;
+                }
+                //=========== CELL PHONE SIZE ===========//
+                @media only screen and (max-width: 1265px) {
+                    display: none;
+                }
+                //=========== CELL PHONE SIZE ===========//
+                @media only screen and (max-width: 1046px) {
+                    display: block;
+                }
+            }
             
             
         } //end videoTextContainer
