--- a/src/app/layouts/home/tenyears-experience/tenyears-experience.component.scss
+++ b/src/app/layouts/home/tenyears-experience/tenyears-experience.component.scss
@@ -31,7 +31,6 @@
 
                     position: relative;
                 }
-
                 
                 //=========== CELL PHONE SIZE ===========//
                 @media only screen and (max-width: 777px) {
@@ -157,9 +156,11 @@
                                 #tenYearsExperienceLelftDivContainer {
 
                                     height: 100%;
+                                    // font-style: italic;
                                     //=========== NORMAL SCREEN SIZE ===========//
                                     @media only screen and (min-width: 1047px) {
-                                        padding: 40px 1px 40px 5px;
+                                        padding: 45px 5px 40px 5px;
+                                        margin-right: 30px;
                                     }
 
                                     //=========== CELL PHONE SIZE ===========//
