--- a/src/app/layouts/home/home.component.html
+++ b/src/app/layouts/home/home.component.html
@@ -33,6 +33,12 @@
   <!--======================================== -->
 
   <app-prevyear-video></app-prevyear-video>
+  
+  <!--======================================== -->
+  <!--============ MISSION VIDEOS ============ -->
+  <!--======================================== -->
+
+  <!-- <app-requirements></app-requirements> -->
 
 
   <!--======================================== -->
