--- a/src/app/layouts/home/header/header.component.html
+++ b/src/app/layouts/home/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="headerBackgroundColor headerText">
+<header class="headerText">
     <ul>
         <li id="headerIconTextLi">      
             <a id="normalScreenHeaderLogo" href="#">
@@ -31,7 +31,7 @@
 
 
         <li id="normalScreenHeaderMenuButtonLi">
-            <button mat-button id="normalScreenHeaderMenuButton" class="headerBackgroundColor" (click)="toggleMenu()">
+            <button mat-button id="normalScreenHeaderMenuButton" class="" (click)="toggleMenu()">
                 <mat-icon *ngIf="!isMenuOpen">menu</mat-icon>
             </button>
             <!-- Menú desplegable -->
