--- a/src/app/layouts/home/home.component.html
+++ b/src/app/layouts/home/home.component.html
@@ -45,14 +45,19 @@
   <!--========= ES CURRENT YEAR TOUR ========= -->
   <!--======================================== -->
 
-  <app-currentyear-tour [hidden]="translate.currentLang===ENGLISH"></app-currentyear-tour>
+  <!-- <app-currentyear-tour [hidden]="translate.currentLang===ENGLISH"></app-currentyear-tour> -->
+
+  <!--======================================== -->
+  <!--========== CURRENT YEAR TOUR =========== -->
+  <!--======================================== -->
+  <app-currentyear-tour></app-currentyear-tour>
   
   
   <!--======================================== -->
   <!--========= EN CURRENT YEAR TOUR ========= -->
   <!--======================================== -->
 
-  <app-en-currentyeartour [hidden]="translate.currentLang===ESPANOL"></app-en-currentyeartour>
+  <!-- <app-en-currentyeartour [hidden]="translate.currentLang===ESPANOL"></app-en-currentyeartour> -->
   
 
 
