--- a/src/app/shared/privacy-modal/privacy-modal.component.html
+++ b/src/app/shared/privacy-modal/privacy-modal.component.html
@@ -2,7 +2,7 @@
 
 <mat-dialog-content>
 
-    <section id="privacy-policy" [hidden]="currentLang===ENGLISH">
+    <section id="privacy-policy" [hidden]="translate.currentLang===ENGLISH">
         
         <h2>Política de Privacidad</h2>
         <p>
@@ -83,7 +83,7 @@
         </p>
     </section>
 
-    <section id="privacy-policy" [hidden]="currentLang===ESPANOL">
+    <section id="privacy-policy" [hidden]="translate.currentLang===ESPANOL">
       <h2>Privacy Policy</h2>
       <p>
         At <strong>Global Awakening Movement Association</strong> (hereinafter "we" or "the controller"), with CIF <strong>G88589908</strong>, we are committed to protecting and respecting your privacy. This policy explains how we collect, use, and protect the personal information you provide to us when applying as an evangelical missionary through our website.
