--- a/src/app/layouts/home/identity/identity.component.scss
+++ b/src/app/layouts/home/identity/identity.component.scss
@@ -56,13 +56,46 @@
 
                   display: block;
                   position: absolute;
-                  height: 100%;
+                  //=========== NORMAL SCREEN SIZE ===========//
+                  @media only screen and (min-width: 1279px) {
+                    height: 121%;
+                  }
+                  //=========== CELL PHONE SIZE ===========//
+                  @media only screen and (max-width: 1278px) {
+                      height: 121%;
+                  }
+                  //=========== CELL PHONE SIZE ===========//
+                  @media only screen and (max-width: 1160px) {
+                      height: 122%;
+                  }
+                  //=========== CELL PHONE SIZE ===========//
+                  @media only screen and (max-width: 1100px) {
+                      height: 123%;
+                  }
+                  //=========== CELL PHONE SIZE ===========//
+                  @media only screen and (max-width: 1047px) {
+                      height: 125%;
+                  }
+                  //=========== CELL PHONE SIZE ===========//
+                  @media only screen and (max-width: 992px) {
+                      height: 116%;
+                  }
+                  // //=========== CELL PHONE SIZE ===========//
+                  // @media only screen and (max-width: 1046px) {
+                  //     height: 118%;
+                  // }
+                  //=========== CELL PHONE SIZE ===========//
+                  @media only screen and (max-width: 414px) {
+                      height: 117%;
+                  }
+                  
                   width: 100%;
 
                   z-index: 1; // Capa base del lienzo
 
-                  background: url('../../../../assets/img/identity-bg-4.png'); 
+                  background: url('../../../../assets/img/identity-bg-10.png'); 
                   background-size: cover;
+                  top: -150px;
                   // border-radius: 12px;
                   // box-shadow: 4px 4px 15px rgba(0, 0, 0, 0.2); // Sombra para dar efecto de flotación
                   // border: 2px solid rgba(255, 255, 255, 0.6);
