--- a/src/app/layouts/home/prevyear-video/prevyear-video.component.html
+++ b/src/app/layouts/home/prevyear-video/prevyear-video.component.html
@@ -4,7 +4,7 @@
   <!--============ MISSION VIDEOS ============ -->
   <!--======================================== -->
 
-<section id="previousYearVideo">
+<section id="previousYearVideo" [hidden]="translate.currentLang===ENGLISH">
 
     <div class="videoRow">
 
@@ -12,9 +12,7 @@
             <iframe class="vertical-video" src="https://www.youtube.com/embed/SIEj5fBaIHw" frameborder="0" allowfullscreen>
             </iframe>
         </div>
-        <!-- <div class="videoContainer">
-            <iframe class="vertical-video" src="https://www.youtube.com/embed/SIEj5fBaIHw" frameborder="0" allowfullscreen></iframe>
-        </div> -->
+
         <div class="videoTextContainer">
             <div id="verse1" class="verse">
                 <p class="quote">“Id por todo el mundo y predicad el evangelio a toda criatura.”</p>
@@ -42,6 +40,35 @@
                 <p class="verse-text">"Proclamad su gloria entre las naciones, sus maravillas entre todos los pueblos."</p>
                 <p class="verse-ref">- Salmos 96:3</p>
             </div> -->
+        </div>
+
+    </div>
+</section>
+
+<section id="previousYearVideo" [hidden]="translate.currentLang===ESPANOL">
+
+    <div class="videoRow">
+
+        <div class="videoContainer">
+            <iframe class="vertical-video" src="https://www.youtube.com/embed/SIEj5fBaIHw" frameborder="0" allowfullscreen>
+            </iframe>
+        </div>
+
+        <div class="videoTextContainer">
+            <div id="verse1" class="verse">
+                <p class="quote">“Go ye into all the world, and preach the gospel to every creature.”</p>
+                <p class="reference">- Mark 16:15 (KJV)</p>
+            </div>
+            <div id="verse2" class="verse">
+                <p class="quote">“Go ye therefore, and teach all nations, baptizing them in the name of the Father, and of the Son, and of the Holy Ghost:  
+                Teaching them to observe all things whatsoever I have commanded you: and, lo, I am with you alway, even unto the end of the world. Amen.”</p>
+                <p class="reference">- Matthew 28:19-20 (KJV)</p>
+            </div>
+            <div id="verse3" class="verse">
+                <p class="quote">“How then shall they call on him in whom they have not believed? and how shall they believe in him of whom they have not heard?  
+                and how shall they hear without a preacher?”</p>
+                <p class="reference">- Romans 10:14 (KJV)</p>
+            </div>
         </div>
 
     </div>
