--- a/src/app/layouts/home/prevyear-video/prevyear-video.component.scss
+++ b/src/app/layouts/home/prevyear-video/prevyear-video.component.scss
@@ -72,6 +72,7 @@
 
             // display: flex;
             justify-content: left;
+            padding: 0 20px;
 
             // flex-direction: column;
             // align-items: center;
@@ -90,9 +91,17 @@
 
 
             .verse {
-                font-size: 1.1rem;
+                //=========== NORMAL SCREEN SIZE ===========//
+                @media only screen and (min-width: 1047px) {
+                    font-size: 1rem;
+                }
+                //=========== CELL PHONE SIZE ===========//
+                @media only screen and (max-width: 1046px) {
+                    font-size: 0.9rem;
+                }
+                
                 font-weight: bold;
-                color: #333;
+                color: #616060;
                 margin: 15px 0;
                 padding: 10px;
                 background: #ffffff;
@@ -106,9 +115,17 @@
                 
                 .reference {
                     display: block;
-                    font-size: 1rem;
+                    //=========== NORMAL SCREEN SIZE ===========//
+                    @media only screen and (min-width: 1047px) {
+                        font-size: 0.9rem;
+                    }
+                    //=========== CELL PHONE SIZE ===========//
+                    @media only screen and (max-width: 1046px) {
+                        font-size: 0.9rem;
+                    }
                     font-weight: bold;
                     color: $gamaColor6; // Color azul para resaltar
+                    font-style: italic;
                     margin-top: 5px;
                 }
 
@@ -122,7 +139,11 @@
                 }
                 //=========== CELL PHONE SIZE ===========//
                 @media only screen and (max-width: 1046px) {
-                    margin: 50px 0px 15px 0px;
+                    margin: 40px 0px 15px 0px;
+                }
+                //=========== CELL PHONE SIZE ===========//
+                @media only screen and (max-width: 414px) {
+                    margin: 30px 0px 15px 0px;
                 }
                 
                 padding: 0px 10px 10px 10px;
