--- a/src/app/layouts/home/team/team.component.scss
+++ b/src/app/layouts/home/team/team.component.scss
@@ -14,6 +14,21 @@
         padding: 40px 30px 0px 30px;
         // padding-top: 40px;
     }
+    //=========== CELL PHONE SIZE ===========//
+    @media only screen and (max-width: 992px) {
+        padding: 80px 30px 0px 30px;
+        // padding-top: 40px;
+    }
+    //=========== CELL PHONE SIZE ===========//
+    @media only screen and (max-width: 560px) {
+        padding: 70px 30px 0px 30px;
+        // padding-top: 40px;
+    }
+    //=========== CELL PHONE SIZE ===========//
+    @media only screen and (max-width: 414px) {
+        padding: 70px 30px 0px 30px;
+        // padding-top: 40px;
+    }
     
 
     #speakersSpaceAtBeginning {
